Fix leagues banner on mobile (#930)
* add guide for creating database to server-guide

* set max height for ParticipantSelector and edit scrollbar

* revert ParticipantsSelector

* add max-height and scrollbar to TeamComposeModal

* fix mobile display for leagues banner + move nbsp to <p>

--- a/app/src/components/Banner/Banner.scss
+++ b/app/src/components/Banner/Banner.scss
@@ -17,4 +17,15 @@
     font-size: 0.8em;
     color: $brand-color-bright;
   }
+
+  @media only screen and (max-width: $breakpoint-small) {
+    flex-direction: column;
+    p {
+      margin: 5px;
+    }
+
+    a {
+      margin-bottom: 10px;
+    }
+  }
 }
